@@ -34,6 +34,8 @@ New features:
 - Added ability to activate skills or use items based on current special
   statuses (such as blessed, poisoned, etc).
   This is similar to modkore's _inStatus/_outStatus feature.
+- The Linux version now automatically compiles Tools.so for you if it
+  doesn't exist.
 
 
 New commands:
